--- a/angular.json
+++ b/angular.json
@@ -29,10 +29,22 @@
                 "glob": "**/*.svg",
                 "input": "node_modules/ionicons/dist/ionicons/svg",
                 "output": "./svg"
+              },
+              {
+                "glob": "manifest.webmanifest",
+                "input": "public",
+                "output": "./"
+              },
+              {
+                "glob": "**/*",
+                "input": "public/icons",
+                "output": "./icons"
               }
             ],
             "styles": ["src/global.scss", "src/theme/variables.scss"],
-            "scripts": []
+            "scripts": [],
+            "serviceWorker": true,
+            "ngswConfigPath": "ngsw-config.json"
           },
           "configurations": {
             "production": {
@@ -109,6 +121,16 @@
                 "glob": "**/*.svg",
                 "input": "node_modules/ionicons/dist/ionicons/svg",
                 "output": "./svg"
+              },
+              {
+                "glob": "manifest.webmanifest",
+                "input": "public",
+                "output": "./"
+              },
+              {
+                "glob": "**/*",
+                "input": "public/icons",
+                "output": "./icons"
               }
             ],
             "styles": ["src/global.scss", "src/theme/variables.scss"],
